# marlinbox-rs

./: .gitignore  Cargo.toml  flake.nix  music.json  tailwind.config.js
assets/: index.html  styles.css
src/: card.rs  card_reader.rs  error.rs  lib.rs  library.rs  main.rs  manager.rs  service.rs
