[package]
name = "marlinbox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
crossbeam-channel = "0.5.13"
rand = "0.8.5"
rodio = "0.19.0"
rusb = "0.9.4"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wifi-rs = "0.2.4"
